﻿MySQL for Visual Studio 1.2.9 MR Release Notes
------------------------------------

Welcome to the release notes for MySQL for Visual Studio 1.2.9 MR

* Added support for Visual Studio 2019 with the ability to choose the flavor/s (Community, Professional, Enterprise) on 
which to perform the installation.
* Removed support for Visual Studio 2013.
* Removed support for Visual Studio 2012.
* Added the Configuration Update Tool which monitors installations of Connector/NET and updates the configuration of
  MySQL for Visual Studio to always use the latest version of the MySql.Data library.
* Fixed multiple bugs that prevented the generation of table adapters and data sets.




MySQL for Visual Studio 1.2.8 MR Release Notes
------------------------------------

Welcome to the release notes for MySQL for Visual Studio 1.2.8 MR

* Added support for MySQL 8 server features.
* Added support for Connector/NET 8.0.11.
* Fixed a bug in the msi installer which caused the installation/uninstallation to roll back whenever Visual Studio
  failed to execute the "devenv /updateconfiguration" command. Now a warning is displayed to users with instructions
  on how to proceed.




MySQL for Visual Studio 1.2.7 MR Release Notes
------------------------------------

Welcome to the release notes for MySQL for Visual Studio 1.2.7 MR

* Added support for Visual Studio 2017 with the ability to choose the flavor/s (Community, Professional, Enterprise) on 
which to perform the installation.
* Removed support for Visual Studio 2010.
* Fixed several bugs that would cause inconsistencies when selecting/unselecting schemas in the Data Export Tool.
* Script files would stop responding to keyboard input upon saving the file for the first time.




MySQL for Visual Studio 1.2.6 MR Release Notes
------------------------------------

Welcome to the release notes for MySQL for Visual Studio 1.2.6 MR
