@@ -19,7 +19,7 @@
   </TemplateContent>
 
   <WizardExtension>
-    <Assembly>MySql.VisualStudio, Version=1.2.9.0, Culture=Neutral, PublicKeyToken=c5687fc88969c44d</Assembly>
+    <Assembly>MySql.VisualStudio, Version=1.2.10.0, Culture=Neutral, PublicKeyToken=c5687fc88969c44d</Assembly>
     <FullClassName>MySql.Data.VisualStudio.Wizards.ItemTemplates.ItemTemplatesWinFormsWizardCSharp</FullClassName>
   </WizardExtension>
 </VSTemplate>
