@@ -6,5 +6,5 @@
     cause the file to be unrecognizable by the program.
 -->
 <GenericObjectDataSource DisplayName="MySqlDbExportOptions" Version="1.0" xmlns="urn:schemas-microsoft-com:xml-msdatasource">
-   <TypeInfo>MySql.Data.VisualStudio.DBExport.MySqlDbExportOptions, MySql.VisualStudio, Version=1.2.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d</TypeInfo>
+   <TypeInfo>MySql.Data.VisualStudio.DBExport.MySqlDbExportOptions, MySql.VisualStudio, Version=1.2.10.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d</TypeInfo>
 </GenericObjectDataSource>
