@@ -43,4 +43,4 @@ using System.Security;
 // You can specify all the values or you can default the Revision and Build Numbers 
 // by using the '*' as shown below:
 
-[assembly: AssemblyVersion("1.2.9")]
+[assembly: AssemblyVersion("1.2.10")]
